syntax = "proto3";

package com.lodny.rwcommon.grpc;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.lodny.rwcommon.grpc.rwuser";

service RwUser {
  rpc registerUser (GrpcRegisterUserRequest) returns (GrpcLoginResponse);
  rpc login (GrpcLoginRequest) returns (GrpcLoginResponse);
  rpc updateUser (GrpcUpdateUserRequest) returns (GrpcLoginResponse);
  rpc getUserIdByUsername (GrpcUsernameRequest) returns (GrpcIdResponse);
}


message GrpcRegisterUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message GrpcLoginRequest {
  string email = 1;
  string password = 2;
}

message GrpcUpdateUserRequest {
  optional string username = 1;
  optional string email = 2;
  optional string password = 3;
  optional string bio = 4;
  optional string image = 5;
  int64 userId = 6;
}

message GrpcLoginResponse {
  string email = 1;
  string username = 2;
  optional string bio = 3;
  optional string image = 4;
  optional int64 id = 5;
}



